--- a/client/src/app/components/carousel/carousel.scss
+++ b/client/src/app/components/carousel/carousel.scss
@@ -1,5 +1,7 @@
 .carousel-container {
   width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   margin-bottom: 3rem;
   border-radius: .5rem;
   overflow: hidden;
@@ -22,7 +24,6 @@
 
 .carousel-track {
   display: flex;
-  width: 100%;
   height: 100%;
   transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
