--- a/client/src/app/components/contact/contact.scss
+++ b/client/src/app/components/contact/contact.scss
@@ -130,7 +130,7 @@
   label {
     display: block;
     margin-bottom: 0.5rem;
-    font-weight: 600;
+    font-weight: 300;
     color: var(--text-color);
   }
 
