--- a/client/src/app/components/project-detail/project-detail.scss
+++ b/client/src/app/components/project-detail/project-detail.scss
@@ -1,5 +1,7 @@
 .project-detail {
   padding-bottom: 5rem;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .project-hero {
@@ -151,7 +153,7 @@
 }
 
 .project-body {
-  margin-top: 26rem;
+  margin-top: 30rem;
   @media (min-width: 768px) {
     margin-top: 4rem;
   }
@@ -169,6 +171,9 @@
 }
 
 .main-content {
+  max-width: 100%;
+  overflow: hidden;
+  
   .case-study-section {
     margin-bottom: 5rem;
     position: relative;
