--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -38,6 +38,8 @@ body {
   transition: background-color 0.3s, color 0.3s;
   position: relative;
   min-height: 100vh;
+  overflow-x: hidden;
+  width: 100%;
 
   &::before {
     content: '';
